[gd_scene load_steps=3 format=3 uid="uid://cxvyvauq3xhhd"]

[ext_resource type="FontFile" uid="uid://bqt6s0iqt8dpe" path="res://fonts/roboto/Roboto-Light.ttf" id="1_2ctaa"]
[ext_resource type="Script" uid="uid://cdeprhirf1kpc" path="res://windows/settingsWindow/options/LanguageOption.gd" id="1_xrxsn"]

[node name="LanguageOption" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
script = ExtResource("1_xrxsn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 19

[node name="LanguageTitle" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_2ctaa")
theme_override_font_sizes/normal_font_size = 40
text = " Idioma:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="LanguageOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_2ctaa")
theme_override_font_sizes/font_size = 25
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Espanõl"
popup/item_1/id = 1
popup/item_2/text = "Português"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[connection signal="item_selected" from="VBoxContainer/LanguageOptionButton" to="." method="_on_language_option_button_item_selected"]
